# GOLDILOCKS

./: CMakeLists.txt  FlexBison.cmake  PackageName.cmake  README.md  product.sh  product_VS2013.bat  product_nmake.bat
layer/Communication/: CMakeLists.txt  Doxyfile_CM_API.in
layer/Communication/dev/include/: cml.h  cmlDef.h  cmlGeneral.h  cmlInterProcess.h  cmlProtocol.h  cmlRowStatusDef.h.in
layer/DataType/: CMakeLists.txt  Doxyfile_DataType_API.in
layer/DataType/dev/include/: dtl.h  dtlCharacterSet.h  dtlDataType.h  dtlDataValue.h  dtlDef.h  dtlFuncAddMonths.h  dtlFuncArithmetic.h  dtlFuncBetween.h  dtlFuncBitWise.h  dtlFuncCommon.h  dtlFuncFormatting.h  dtlFuncGeneralComparison.h  dtlFuncLastDay.h  dtlFuncMathematical.h  dtlFuncRowId.h  dtlFuncString.h  dtlFuncUnixTime.h  dtlFunction.h  dtlGeneral.h  dtlHash32.h  dtlOperCast.h  dtlOperCompare.h  dtlOperCompareType.h  dtlOperLogical.h  dtlPhysicalComp.h  dtlPhysicalFunc.h  dtlTest.h  dtlTimeZone.h  dtlXid.h
layer/DataType/dev/src/: README
layer/ExecutionLibrary/: CMakeLists.txt  Doxyfile_Execution_API.in
layer/ExecutionLibrary/dev/include/: ell.h  ellCursor.h  ellCursorDef.h.in  ellDataValue.h  ellDef.h  ellDictAuthorization.h  ellDictBuiltInDataType.h  ellDictCheckColumnUsage.h  ellDictCheckConstraint.h  ellDictCheckTableUsage.h  ellDictColumn.h  ellDictColumnPrivilege.h  ellDictColumnType.h  ellDictDatabase.h  ellDictDatabasePrivilege.h  ellDictIndex.h  ellDictIndexKeyColumnUsage.h  ellDictIndexKeyTableUsage.h  ellDictKeyColumnUsage.h  ellDictPendingTrans.h  ellDictProfile.h  ellDictPublicSynonym.h  ellDictReferentialConstraint.h  ellDictRoleAuthorizationDescriptor.h  ellDictSchema.h  ellDictSchemaPrivilege.h  ellDictSequence.h  ellDictSqlConformance.h  ellDictSqlImplementationInfo.h  ellDictSqlSizing.h  ellDictSynonym.h  ellDictTable.h  ellDictTableConstraint.h  ellDictTablePrivilege.h  ellDictTablespace.h  ellDictTablespacePrivilege.h  ellDictUsagePrivilege.h  ellDictUser.h  ellDictUserSchemaPath.h  ellDictView.h  (+13 more)
layer/ExecutionLibrary/dev/src/: README
layer/GlieseLibrary/JDBC/: CMakeLists.txt  FindJava.cmake  UseJava.cmake
layer/GlieseLibrary/JDBC/ver4/: CMakeLists.txt
layer/GlieseLibrary/JDBC/ver5/: CMakeLists.txt
layer/GlieseLibrary/ODBC/: CMakeLists.txt  Doxyfile_ODBC_API.in
layer/GlieseLibrary/PyGliese/: CMakeLists.txt  Doxyfile_PYGLIESE_API.in
layer/GlieseLibrary/esql/: CMakeLists.txt  Doxyfile_GOLDILOCKSESQL_API  Doxyfile_GOLDILOCKSESQL_API.in
layer/GlieseTool/LogMirror/: CMakeLists.txt
layer/GlieseTool/LogMirror/dev/: README
layer/GlieseTool/cyclonem/: CMakeLists.txt
layer/GlieseTool/cymonm/: CMakeLists.txt
layer/GlieseTool/gcreatedb/: CMakeLists.txt
layer/GlieseTool/gdump/: CMakeLists.txt
layer/GlieseTool/gerrormsg/: CMakeLists.txt
layer/GlieseTool/gloader/: CMakeLists.txt
layer/GlieseTool/glsnr/: CMakeLists.txt
layer/GlieseTool/gmaster/: CMakeLists.txt
layer/GlieseTool/gpec/: CMakeLists.txt
layer/GlieseTool/gsql/: CMakeLists.txt
layer/GlieseTool/gsyncher/: CMakeLists.txt
layer/GlieseTool/gsyncher/dev/: README
layer/GlieseTool/tablediff/: CMakeLists.txt  FindPackageHandleStandardArgs.cmake  UseJava.cmake
layer/GlieseTool/test/: CMakeLists.txt  testCheckPoint.c
layer/Kernel/: CMakeLists.txt  Doxyfile_Kernel_API.in
layer/Kernel/dev/include/: knl.h  knlAggregation.h  knlBindContext.h  knlBreakPoint.h  knlCondVar.h  knlDataValue.h  knlDef.h  knlDynamicMem.h  knlEnvironment.h  knlEvent.h  knlExpression.h  knlFileMgr.h  knlFilter.h  knlFixedTable.h  knlFunction.h  knlGeneral.h  knlHeapQueue.h  knlLatch.h  knlMemController.h  knlMemManager.h  knlPlanCache.h  knlProcess.h  knlProperty.h  knlQSort.h  knlQueue.h  knlRegionMem.h  knlRing.h  knlSession.h  knlShmManager.h  knlStaticHash.h  knlTimer.h  knlTraceLogger.h  knlValueBlock.h  knlXaHash.h
layer/Kernel/dev/src/: README
layer/ServerCommunication/: CMakeLists.txt
layer/ServerCommunication/dev/include/: scl.h  sclCommunication.h  sclDef.h  sclGeneral.h  sclInterProcess.h  sclProtocol.h
layer/ServerLibrary/: CMakeLists.txt
layer/ServerLibrary/dev/include/: sll.h  sllDef.h  sllGeneral.h
layer/Session/: CMakeLists.txt  Doxyfile_Session_API.in
layer/Session/dev/include/: ssl.h  sslCommand.h  sslConstDef.h.in  sslDef.h  sslEnv.h  sslGeneral.h  sslSession.h  sslStatement.h  sslXaCommand.h
layer/Session/dev/src/: README
layer/SqlProcessor/: CMakeLists.txt  Doxyfile_SqlProcessor_API.in
layer/SqlProcessor/dev/include/: qll.h  qllCursor.h  qllDBCStmt.h  qllDef.h  qllGeneral.h  qllParameter.h  qllSession.h  qllSqlAPI.h  qllStatement.h  qllTarget.h  qllTrace.h  qllTypeDef.h
layer/SqlProcessor/dev/src/: README
layer/Standard/: AIX.cmake  BeOS.cmake  CMakeLists.txt  Doxyfile_Standard_API.in  HP-UX.cmake  Linux.cmake  SunOS.cmake  Windows.cmake  configure.cmake
layer/Standard/dev/include/: stl.h  stlAllocator.h  stlAtomic.h  stlBacktrace.h  stlCommMgr.h  stlDef.h  stlDigest.h  stlDynamicAllocator.h  stlEnv.h  stlError.h  stlEtc.h  stlFile.h  stlGeneral.h  stlGetOpt.h  stlIbApi.h  stlIni.h  stlLinkingLoader.h  stlLog.h  stlLogger.h  stlMath.h  stlMemorys.h  stlMsgQueue.h  stlNetworkIo.h  stlParseLex.h.in  stlPoll.h  stlProduct.h.in  stlRing.h  stlSemaphore.h  stlShm.h  stlSignal.h  stlSpinLock.h  stlSqlState.h  stlStaticHash.h  stlStrings.h  stlSystem.h  stlThreadProc.h  stlTime.h  stlTypes.h.in  stlUInt128.h  (+1 more)
layer/Standard/test/: CMakeLists.txt  Standard.lst  Standard.sql  readShm.c  testBacktrace.c  testCM.c  testCM.lst  testDigest.c  testDigest.lst  testEnv.c  testEnv.lst  testFile.c  testFile.lst  testGetOpt.c  testIb.c  testPassfd.c  testPoll.c  testPoll.lst  testProcNThread.c  testProcNThread.lst  testSemaphoreAbnormalCase.c  testSemaphoreAbnormalCase.lst  testSemaphoreNormalCase.c  testSemaphoreNormalCase.lst  testShm.c  testShm.lst  testShm2.c  testShm2.lst  testSignal.c  testSignal.lst  testSocket.c  testSocket.lst  testStrings.c  testStrings.lst  testTime.c  testUser.c  testUser.lst  workThreads.c
layer/StorageManager/: CMakeLists.txt  Doxyfile_SM_API.in
layer/StorageManager/test/: odulus.c
(+2687 files in other folders)
